fix spacing across all types of error panels

--- a/src/components/checkboxes/_checkboxes.scss
+++ b/src/components/checkboxes/_checkboxes.scss
@@ -14,7 +14,7 @@
     width: 100%;
 
     &:last-child {
-      margin-bottom: 0;
+      margin-bottom: 1rem;
     }
 
     @include mq(m) {
